[project]
name = "color-analysis"
version = "0.1.0"
description = "This is a tool I use to adapt and activly develope the theme; which lives within the root folder of this repository."
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.scripts]
color-analysis = "color_analysis.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/color_analysis"]

[dependency-groups]
dev = [
    "ruff>=0.15.3",
]

[tool.ruff]
target-version = "py314"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "RUF", # ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["color_analysis"]
