[project]
name = "albers"
version = "0.2.1"
description = "Color analysis for theme palettes: harmony, contrast, and perceptual metrics."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Luis C. Markmann" }]
requires-python = ">=3.12"
keywords = ["color", "theme", "palette", "contrast", "harmony", "accessibility", "wcag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Terminals",
    "Topic :: Utilities",
]
dependencies = [
    "rich>=14.3.3",
    "typer>=0.24.1",
]

[project.urls]
Homepage = "https://github.com/lmarkmann/albers"
Repository = "https://github.com/lmarkmann/albers"
Issues = "https://github.com/lmarkmann/albers/issues"

[project.scripts]
albers = "albers.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/albers"]

[dependency-groups]
dev = [
    "ruff>=0.15.3",
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 80
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "RUF", # ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["albers"]
